# RXL

./: .gitattributes  .gitignore  .todo  IndentCheck.py  LICENSE  Package.json  README.md  READY.py  RX.py  RX.rx  RX_CSG  RX_Lang_Lib.py  RX_SuperLite.py  Ready.py  _tst.rx_  f.rx7  ins.py  instal  install.bat  install.py  pyproject.toml  requirements.txt  result.txt  setup.py  translated  translated.bak  tst.rx  tst.rx.bak  tst2.rx  tst2.rx7  tst3.rx7  x.pl  x.py  x.rx7
Libraries/: IndentCheck.py
Parsing-Test/: Canopy.py  Grammar.py  Parsing.py  cnp_grm.peg  cnp_grm.py
Parsing-Test/Canopy/: Canopy.py  Grammar.py
Parsing-Test/PEGs/: array.peg  c_check.peg  check.peg  const.peg  include.peg  load.peg  until.peg
RXL/: Configs.py  Errors.py  Grammar.py  Lang.py  Lib.py  Libs.py  NewFeatures.py  RXL.py  __init__.py  lib.py  setup.py
RXL/Grammar/: __init__.py  functions.py  regex.py  source.py
RXL/RXL/: Errors.py  Grammar.py  __init__.py
Tests/: RXLconfig.toml  _tst.rx_  removed.py  setup.py  test.rx  tst.py  tst.rx  tst3.rx7
Tests/Parsing-Test/: Grammar.py
VS-Code-Ext/rx-lang/: CHANGELOG.md  language-configuration.json  (+3 more)
__RX_LC__/: _info_  _tst.rx_  _tst.rx_info_  tst2  tst3
__RX_LIB__/: tst2.py
docs/: runtime.md  translation.md
ext rx/: MagicPython.tmLanguage.json  Package.json  language-configuration.json  package-lock.json  python.json
other/: Notes.txt  READY.py  install.bat  install.py  removed.py
rx/: language-configuration.json  package.json
rx-lang/: README.md  package-lock.json  package.json
rxpy-ext-pack/: README.md  package.json
(+20 files in other folders)
